--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "@storybook/addon-links": "^7.6.3",
     "@storybook/addon-onboarding": "^1.0.8",
     "@storybook/blocks": "^7.6.3",
+    "@storybook/jest": "^0.2.3",
     "@storybook/nextjs": "^7.6.3",
     "@storybook/react": "^7.6.3",
     "@storybook/test": "^7.6.3",
+    "@storybook/testing-library": "^0.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
