--- a/package.json
+++ b/package.json
@@ -55,11 +55,16 @@
     "eslint-config-next": "14.0.3",
     "eslint-plugin-storybook": "^0.6.15",
     "husky": "^8.0.0",
+    "msw": "^1.3.2",
+    "msw-storybook-addon": "^1.10.0",
     "postcss": "^8",
     "postcss-loader": "^7.3.3",
     "storybook": "^7.6.3",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
