--- a/package.json
+++ b/package.json
@@ -36,16 +36,17 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "^7.6.3",
-    "@storybook/addon-essentials": "^7.6.3",
-    "@storybook/addon-interactions": "^7.6.3",
-    "@storybook/addon-links": "^7.6.3",
+    "@storybook/addon-a11y": "^8.0.0-alpha.3",
+    "@storybook/addon-essentials": "^8.0.0-alpha.3",
+    "@storybook/addon-interactions": "^8.0.0-alpha.3",
+    "@storybook/addon-links": "^8.0.0-alpha.3",
+    "@storybook/addon-mdx-gfm": "^8.0.0-alpha.3",
     "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/blocks": "^7.6.3",
+    "@storybook/blocks": "^8.0.0-alpha.3",
     "@storybook/jest": "^0.2.3",
-    "@storybook/nextjs": "^7.6.3",
-    "@storybook/react": "^7.6.3",
-    "@storybook/test": "^7.6.3",
+    "@storybook/nextjs": "^8.0.0-alpha.3",
+    "@storybook/react": "^8.0.0-alpha.3",
+    "@storybook/test": "^8.0.0-alpha.3",
     "@storybook/testing-library": "^0.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -56,11 +57,12 @@
     "eslint-config-next": "14.0.3",
     "eslint-plugin-storybook": "^0.6.15",
     "husky": "^8.0.0",
-    "msw": "^1.3.2",
-    "msw-storybook-addon": "^1.10.0",
+    "msw": "2",
+    "msw-storybook-addon": "2.0.0--canary.122.06f0c92.0",
     "postcss": "^8",
     "postcss-loader": "^7.3.3",
-    "storybook": "^7.6.3",
+    "storybook": "^8.0.0-alpha.3",
+    "storybook-addon-module-mock": "^1.1.2",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
