--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   },
   "devDependencies": {
     "@storybook/addon-a11y": "^8.0.0-alpha.3",
+    "@storybook/addons": "7.6.0-beta.2",
+    "@storybook/api": "7.6.0-beta.2",
     "@storybook/addon-essentials": "^8.0.0-alpha.3",
     "@storybook/addon-interactions": "^8.0.0-alpha.3",
     "@storybook/addon-links": "^8.0.0-alpha.3",
