--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.2",
+    "@axe-core/playwright": "^4.8.3",
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
@@ -20,56 +21,43 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.5",
     "@splidejs/react-splide": "^0.7.12",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
-    "lucide-react": "^0.294.0",
-    "next": "14.0.3",
+    "lucide-react": "^0.314.0",
+    "next": "latest",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.49.2",
-    "react-icons": "^4.12.0",
-    "tailwind-merge": "^2.1.0",
+    "react-hook-form": "^7.49.3",
+    "react-icons": "^5.0.1",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "^8.0.0-alpha.3",
-    "@storybook/addon-essentials": "^8.0.0-alpha.3",
-    "@storybook/addon-interactions": "^8.0.0-alpha.3",
-    "@storybook/addon-links": "^8.0.0-alpha.3",
-    "@storybook/addon-mdx-gfm": "^8.0.0-alpha.3",
-    "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/addons": "7.6.0-beta.2",
-    "@storybook/api": "7.6.0-beta.2",
-    "@storybook/blocks": "^8.0.0-alpha.3",
-    "@storybook/jest": "^0.2.3",
-    "@storybook/nextjs": "^8.0.0-alpha.3",
-    "@storybook/react": "^8.0.0-alpha.3",
-    "@storybook/test": "^8.0.0-alpha.3",
-    "@storybook/testing-library": "^0.2.2",
+    "@playwright/test": "^1.41.0",
+    "@storybook/addon-a11y": "^7.6.10",
+    "@storybook/addon-essentials": "^7.6.10",
+    "@storybook/addon-interactions": "^7.6.10",
+    "@storybook/addon-links": "^7.6.10",
+    "@storybook/addon-onboarding": "^1.0.10",
+    "@storybook/blocks": "^7.6.10",
+    "@storybook/nextjs": "^7.6.10",
+    "@storybook/react": "^7.6.10",
+    "@storybook/test": "^7.6.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "css-loader": "^6.8.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3",
+    "eslint-config-next": "14.1.0",
     "eslint-plugin-storybook": "^0.6.15",
     "husky": "^8.0.0",
-    "msw": "2",
-    "msw-storybook-addon": "2.0.0--canary.122.06f0c92.0",
     "postcss": "^8",
-    "postcss-loader": "^7.3.3",
-    "storybook": "^8.0.0-alpha.3",
-    "storybook-addon-module-mock": "^1.1.2",
-    "style-loader": "^3.3.3",
-    "tailwindcss": "^3.3.0",
+    "storybook": "^7.6.10",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  },
-  "msw": {
-    "workerDirectory": "public"
   }
 }
