--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "cmdk": "^0.2.0",
     "lucide-react": "^0.314.0",
     "next": "latest",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
+    "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
